api/deploymentconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations: {}
  labels:
    app: ratings
    app.kubernetes.io/component: ratings
    app.kubernetes.io/instance: ratings
  name: ratings
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: ratings
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations: {}
      labels:
        deploymentconfig: ratings
    spec:
      containers:
      - imagePullPolicy: Always
        name: ratings
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - ratings
      from:
        kind: ImageStreamTag
        name: ratings:latest
        namespace: bookinfo
    type: ImageChange
